changed folder name

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ body {
     max-height: 170px;
   }
 
-  #welcome .card-img-top {
+  #welcome-summer .card-img-top {
     max-height: 109px;
   }
 
