--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-:root {
-  --bs-body-bg: #212529;
-}
-
 body {
     font-family: "Barlow", sans-serif;
     color-scheme: dark;
@@ -13,9 +9,36 @@ body {
     height: auto;
   }
 
-  h1 {
-    font-weight: regular;
+  video {
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
   }
+  
+  html, body {
+    height: 100%;
+  }
+
+  #hero{
+    position: relative;
+    /* height: 100%; */
+  }
+  
+  main {
+    background: rgba(black, 0.66);
+    color: white;
+    position: relative;
+    padding: 1rem;
+  }
+  main p {
+      max-width: 600px;
+      margin: 1rem auto;
+    }
+  
 
   .img-thumbnail {
     width: 50px;
@@ -29,15 +52,15 @@ body {
   .card-img-top {
     object-fit: cover;
   }
-  #saldi .card-img-top {
+  #saldi-section .card-img-top {
     max-height: 170px;
   }
 
-  #welcome-summer .card-img-top {
+  #welcome-summer-section .card-img-top {
     max-height: 109px;
   }
 
-  #last-minute img{
+  #last-minute-section img{
     max-height: 133px;
     object-fit: cover;
     width: 100%;
